# spotify-tracker

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  TODO.md  package.json  pnpm-lock.yaml  pyproject.toml  svelte.config.js  tsconfig.scripts.json
.github/workflows/: deploy.yml  enrich-metadata.yml  refresh-rollups.yml  sync-recently-played.yml
backfill/: __init__.py  cleaning.py
docs/: extended-history-backfill-plan.md
notebooks/: spotify_extended_history_explore.py
scripts/: create-invite-code.ts  db-size.ts  enrich-backfill.ts  enrich-metadata.ts  import-spotify-export.ts  invite-user.ts  refresh-rollups.ts  spotify-auth.ts  sync-recently-played.ts
scripts/lib/: dates.ts  env.ts  hash.ts  spotify-dimensions.ts  spotify.ts  supabase-admin.ts
src/: app.html  styles.css
src/lib/: adminDiagnostics.ts  adminHealth.ts  calendar.ts  clock.ts  dateRanges.ts  glyphs.ts  metrics.ts  monthlyTimeline.ts  profileDefaults.ts  release-years.ts  supabase.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
supabase/: config.toml  seed.sql
supabase/functions/: .env.example
supabase/migrations/: 0001_initial_schema.sql  0002_public_read_policies.sql  0003_rollups.sql  20260619080949_fix_refresh_activity_recent_delete.sql  20260619104539_invite_only_friends_mode.sql  20260619121121_restrict_rls_auto_enable_execute.sql  20260619130036_archive_legacy_public_rows.sql  20260619132945_invite_link_onboarding.sql  20260619142000_schedule_sync_due_users_cron.sql  20260622041932_overview_last_7_days.sql  (+13 more)
tests/unit/: hash.test.ts  (+15 more)
tools/: __init__.py
(+51 files in other folders)
