[project]
name = "backfill"
version = "0.1.0"
description = "Local tooling for exploring and cleaning Spotify extended streaming history exports."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "marimo[sql]>=0.14.0",
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "backfill"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["."]
